src/styles/main.css
:root {
	--window-background: #edf0f8;

	/* These variables are used by renderer.js 
       for styling nav elements */
	--nav-default: #ffffff;
	--nav-selected: #f0dede;

	/* Navbar height */
	--nav-height: 25px;

	/* timer background */
	--timer-background: #d3bef0;

    /* Color Themes */
    --background-light: #EDF0F8;
    --foreground-light: #FFFFFF;
    --background-dark: #141414;
    --foregorund-dark: #333333;

    /* Shortcut Colors */
    --light-purple: #DFCDFA;
    --dark-purple: #9D53FD;
    --light-blue: #C9E1F6;
    --dark-blue: #48A3F6;
    --light-yellow: #F4E3CB;
    --dark-yellow: #F3AD4B;
    --light-red: #F4D2D2;
    --dark-red: #E16769;
    --light-green: #CBF4CD;
    --dark-green: #44CA42;

    /* Material Design Custom Colors */
	--mdc-theme-primary: var(--dark-purple);
}

/* Color Class Definitions */

.light-purple {
    background: var(--light-purple);
    color: var(--light-purple);
    border-color: var(--dark-purple);
}

.dark-purple {
    background: var(--dark-purple);
    color: var(--dark-purple);
    border-color: var(--dark-purple);
}

.light-blue {
    background: var(--light-blue);
    color: var(--light-blue);
    border-color: var(--dark-blue);
}

.dark-blue {
    background: var(--dark-blue);
    color: var(--dark-blue);
    border-color: var(--dark-blue);
}

.light-yellow {
    background: var(--light-yellow);
    color: var(--light-yellow);
    border-color: var(--dark-yellow);
}

.dark-yellow {
    background: var(--dark-yellow);
    color: var(--dark-yellow);
    border-color: var(--dark-yellow);
}

.light-red {
    background: var(--light-red);
    color: var(--light-red);
    border-color: var(--dark-red);
}

.dark-red {
    background: var(--dark-red);
    color: var(--dark-red);
    border-color: var(--dark-red);
}

.light-green {
    background: var(--light-green);
    color: var(--light-green);
    border-color: var(--dark-green);
}

.dark-green {
    background: var(--dark-green);
    color: var(--dark-green);
    border-color: var(--dark-green);
}

body, html {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    width: 100%;
	height: 100%;
}

body {
	margin-top: var(--nav-height);
}

[hidden] {
    display: none !important;
}

#content {
	min-height: 100%;
}

h1 {
	font-size: 36px;
	color: #3d3f44;
	display: inline-block;
}

h2 {
	padding: 0px;
}

.icon {
	display: inline-block;
	padding: 8px;
}

::-webkit-scrollbar {
    width: 7px;
}

::-webkit-scrollbar-thumb {
    background-color: #3D3F4480;
    border-radius: 5px;
}

#new-shortcut > i {
	color: #3d3f44;
	cursor: pointer;
}

#home-view {
	min-height: 100%;
	margin: 0;
	padding: 25px;
	padding-top: 13px;
	overflow-x: hidden;
	/* Note: Kevin had a temporary
       display: none; here. If there's bugs,
       try that. */
}

#shortcuts-list {
	width: calc(100% + 50px);
	transform: translateX(-25px);
	margin-left: 12.5px;
	margin-right: 12.5px;
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
}

.shortcut-card-home {
    width: 201px;
    height: 201px;
    margin: 25px;
    margin-left: 12.5px;
    border-width: 1.5px;
    border-style: solid;
    border-radius: 8px;
    position: relative;
}

#edit, #launch {
    background: none !important;
}

.shortcut-card-home > div,h2 {
    background: none !important;
}

.shortcut-card-icons {
	position: absolute;
	right: 0;
}

.shortcut-card-icons > div > i {
	cursor: pointer;
}

.shortcut-card-label {
	position: absolute;
	margin: 12.5px;
	bottom: 0;
}

.shortcut-card-programs {
	width: 100%;
	height: 103px;
	position: absolute;
	top: 44px;
	display: flex;
	margin-left: 6.25px;
	margin-right: 6.25px;
	flex-wrap: wrap;
	cursor: pointer;
}

.shortcut-card-program-icon {
	width: 24px;
	height: 24px;
	margin: 6.25px;
}

.drawer-container {
	overflow: wrap;
	width: 100%;
	flex-direction: row;
	display: flex;  
	flex-wrap: wrap;
}

/* Navigation Bar, at the top of the page */

#nav-bar {
	/* border: 2px solid;
	border-color: lightgray; */
	background: var(--foreground-light);
	display: table;
	table-layout: fixed;
	width: 100%;
	height: var(--nav-height);
	box-sizing: border-box;
	position: fixed;
	transform: translateY(  calc(-1 * var(--nav-height) ) );
	z-index: 99;
}

.nav-item {
	/* The css for nav items is set by renderer.js */
	display: table-cell;
	vertical-align: middle;
	text-align: center;
	overflow: hidden;
	cursor: pointer;
	color: #3D3F44;
	box-sizing: border-box;
	background: var(--nav-default);
}

/* 
 * account for dynamic sizing
 *
 * making internal elements 100% 
 * tends to make the scroll bar act weird 
*/
body {
	background: var(--window-background);
}

/* Edit View */

#edit-view {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: row;
	flex: 1 0px;
	overflow: hidden;
}

#preview-pane {
	width: calc(50% - 50px);
	height: 100%;
	overflow: hidden;
	height: calc(100% - 100px);
	display: flex;
	overflow: hidden;
	left: 0;
	background-color: var(--background-light);
	align-items: center;
	justify-content: center;
}

#edit-pane {
	width: 50%;
	height: calc(100% - 100px);
	background: var(--foreground-light);
	display: inline-block;
	position: absolute;
	right: 0;
	padding: 25px;
	overflow-y: scroll;
}

.shortcut-card-edit {
    width: 201px;
    height: 201px;
    margin: 25px;
    margin-left: 12.5px;
    border-width: 1.5px;
    border-style: solid;
    border-radius: 8px;
    position: relative;
}

.shortcut-card-edit > div,h2 {
    background: none !important;
}

#desktop, #delete {
    background: none !important;
}

#edit-label {
	display: block;
}

#available-programs {
	width: calc(100% - 50px);
	height: 120px;
	border: 1px solid #3d3f4480;
	margin-top: 25px;
	border-radius: 4px;
	padding: 13px;
	position: relative;
}

.floating-box-label {
    transform: translateY(-34px) translateX(-4px);
    background: var(--foreground-light);
    display: inline-block;
    padding-left: 4px;
    padding-right: 4px;
    font-size: .75rem;
    color: #3D3F44;
}

.edit-programs-list {
	width: calc(100% - 25px);
	height: 103px;
	top: 25px;
	position: absolute;
	display: flex;
	flex-wrap: wrap;
	overflow-y: auto;
}

.edit-programs-list-icon {
	width: 24px;
	height: 24px;
	margin: 6.25px;
	cursor: pointer;
}

.program-selected {
    border-width: 1px;
    border-style: solid;
    border-radius: 4px;
    padding: 3px;
    margin: 2.25px;
}

#exit-edit-pane {
	float: right;
	font-weight: bold;
	cursor: pointer;
}

#button-container {
    width: 100%;
    position: relative;
    display: flex;
    justify-content: flex-end;
}

#edit-programs-custom, #edit-programs-custom:focus {
    /* background: var(--dark-purple); */
    border: none;
    border-radius: 4px;
    color: var(--foreground-light);
    font-weight: 600;
    padding: 12.5px;
    padding-top: 8px;
    padding-bottom: 8px;
    margin: 25px;
    margin-top: 12.5px;
    margin-bottom: 12.5px;
    transform: translateX(3px);
    outline: none;
    cursor: pointer;
    font-family: 'Montserrat', sans-serif;
}

#edit-colors {
    width: 250px;
    border: 1px solid #3D3F4480;
    border-radius: 4px;
    padding: 13px;
    padding-bottom: 18.25px;
    margin-top: 12.5px;
    position: relative;
    display: inline-block;
}

#colors-list {
    width: calc(100% - 25px);
    top: 12.5px;
    position: absolute;
    display: flex;
    flex-wrap: wrap;
    overflow-y: auto;
}

.large-color {
    width: 36px;
    height: 36px;
    margin: 6.25px;
    cursor: pointer;
}

.small-color {
    width: 18px;
    height: 18px;
    margin: 0;
    padding: 0;
    margin-left: 18px;
    margin-top: 18px;
}

.color-selected {
    border-width: 1.5px;
    border-style: solid;
    border-radius: 4px;
    overflow: hidden;
    box-sizing: border-box;
}

/* Material Components TextField Fix */
.mdc-notched-outline__notch {
	border-top: 0.5px solid;
	border-bottom: 0.5px solid;
}

/* Timer: */
#timer {
	padding: 0px;
	margin: auto;
	text-align: center;
}

#timer-container > h2 {
	font-size: 75px;
	color: #141414;
	padding-bottom: 10px;
}

#timer-container > mdc-button {
	background: red;
}

#timer-container {
	padding: 10px;
	background: rgb(211,190,240);
	background: linear-gradient(259deg, rgba(211,190,240,1) 0%, rgba(192,158,240,1) 19%, rgba(169,128,227,1) 50%, rgba(196,165,240,1) 84%, rgba(211,190,240,1) 100%);
}

.time-button {
	color: black;
}

#timer-log {
	padding-left: 10px;
	float: left;
	text-align: left;
}

#timer-log-frame {
	padding-left: 20px;
	padding-top: 0px;
}

/* Schedule iframe */
#schedule {
	width: 90%;
	height: 100%;
	padding-left: 20px;
}
.assignment {
	padding-left: 20px;
}

